set up state management with react context for user, incorporate/leverage onAuthStateChange firebase listener

--- a/src/routes/navigation/navigation.scss
+++ b/src/routes/navigation/navigation.scss
@@ -24,7 +24,7 @@
         // align-items: flex;
         justify-content: space-between;
         width: 100%;
-        font-family: 'Julius Sans One';
+        font-family: 'Montserrat';
         padding-top: 5px;
 
         .nav-links {
@@ -33,7 +33,6 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            
   
             .nav-link {
                 padding: 10px 15px;
