--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 body {
+  padding: 20px 40px;
   margin: 0;
   font-family: 'Montserrat', 'Julius Sans One', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
