included ability to added multiple quantity of same items, show the total items in cart, updated styling on title and cart icon

--- a/src/routes/navigation/navigation.scss
+++ b/src/routes/navigation/navigation.scss
@@ -25,7 +25,7 @@
         justify-content: space-between;
         width: 100%;
         font-family: 'Montserrat';
-        padding-top: 5px;
+        padding-left: 5px;
 
         .nav-links {
             width: 50%;
