--- a/src/components/cart-dropdown/cart-dropdown.scss
+++ b/src/components/cart-dropdown/cart-dropdown.scss
@@ -22,7 +22,7 @@
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow: auto;
     }
   
     button {
